--- a/components/studio/chat-input/chat-input.module.scss
+++ b/components/studio/chat-input/chat-input.module.scss
@@ -159,7 +159,7 @@
   place-items: center;
   border-radius: var(--radius-rounded);
   background: var(--text);
-  color: var(--white);
+  color: var(--body);
   font-size: 1.15em;
   flex-shrink: 0;
   transition:
